--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,11 +12,17 @@
  *
  *= require_tree .
  *= require_self
+
  */
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "stxcas";
 
 body {
   padding-top: 50px;
+}
+
+body.wait, body.wait *{
+  cursor: wait !important;
 }
