--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">gSchool</a>
+          <a class="navbar-brand" href="/"></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -28,7 +28,6 @@
         </div>
       </div>
     </div>
-
     <div class="container">
       <%= yield %>
     </div>
